# goph420-w2024-examples

./: .gitignore  README.md  pyproject.toml  reset
examples/: interpolation_plot.py  steady_state_heat.py
src/goph420_examples/: classes.py  functions.py  interpolation.py  test_exp.py
tests/: test_Element.py  test_IntegrationPoint.py  test_Node.py  test_exp.py
