[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goph420_examples"
version = "0.0.1"
authors = [
    { name = "Brandon Karchewski", email = "brandon.karchewski@ucalgary.ca" },
]
description = "Example code for the course GOPH 420"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "matplotlib"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3",
]

[project.urls]
"Homepage" = "https://github.com/karcheba1/goph420-w2024-examples"
